# AtlasAI

./: .gcloudignore  .gitignore  Dockerfile  README.md  deployment.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: data_agent.py  orchestrator.py  policy_agent.py  reasoning_agent.py
backend/app/agents/tools/: policy_tools.py
backend/app/api/schemas/: common.py  recommendation.py  zone.py
backend/app/api/v1/: chat.py  health.py  recommendations.py  router.py  scenarios.py  zones.py
backend/app/core/: exceptions.py  logging.py
backend/app/repositories/: data_repository.py
backend/app/services/: gemini_service.py  recommendation.py  scoring.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_data_agent.py  test_data_repository.py  test_orchestrator.py  test_policy_agent.py  test_reasoning_agent.py
backend/tests/unit/: test_policy_tools.py  test_scoring.py
data/: generate_data.py
data/datasets/: budget_historical.csv  census_demographics.csv  complaints_311.csv  infrastructure_assets.csv  traffic_incidents.csv  utility_outages.csv  zone_boundaries.geojson
docker/: Dockerfile.backend
frontend/: .gcloudignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  test-setup.ts
frontend/src/__tests__/: AskPage.test.tsx  LandingPage.test.tsx  Layout.test.tsx  ReasoningTrail.test.tsx  RecommendationCard.test.tsx  ScenariosPage.test.tsx  api.test.ts  (+4 more)
(+15 files in other folders)
